# Almaeng

./: .dockerignore  .env.backup.20260109_220736  .env.backup.20260109_221120  .env.backup.20260109_222112  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  IMPROVEMENTS.md  Justfile  PHILOSOPHY_AUDIT.md  PHILOSOPHY_IMPROVEMENTS.md  PHILOSOPHY_IMPROVEMENTS_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  package.json  pyproject.toml  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: deploy.yml
.granite/: app.json
backend/: tests.py
backend/config/: scheduler.py  settings.py  urls.py
backend/domains/: DOMAIN_ARCHITECTURE.md
backend/domains/ai/recommendations/: __init__.py  apps.py  interface.py  services.py  urls.py
backend/domains/ai/recommendations/data/: quiz_questions.py
backend/domains/ai/service/chatbot/: __init__.py  apps.py  gemini_service.py  interface.py  models.py  prompts.py  search.py  urls.py
backend/domains/ai/service/providers/: README.md  __init__.py  apps.py  base.py  conf.py  gemini.py  interface.py
backend/domains/base/accounts/: apps.py  interface.py  urls.py
backend/domains/base/analytics/: __init__.py  apps.py  queries.py
backend/domains/base/core/: __init__.py  apps.py  conf.py  interface.py  models.py  schemas.py  selectors.py  services.py  urls.py
backend/domains/base/core/pages/: __init__.py
backend/domains/base/health/: apps.py  interface.py  urls.py
backend/domains/base/media/: __init__.py  apps.py
backend/domains/base/media/images/: __init__.py  interface.py
backend/domains/base/media/migrations/: 0001_initial.py
backend/domains/base/media/storage/: __init__.py  interface.py
backend/domains/base/notifications/: __init__.py  _dropdown.html  apps.py  list.html  urls.py  views.py
backend/domains/base/notifications/email/: __init__.py  interface.py
backend/domains/base/notifications/push/: __init__.py  interface.py
backend/domains/base/settings/: apps.py  context_processors.py  interface.py
backend/domains/billing/: __init__.py  apps.py  urls.py
backend/domains/billing/logic/: __init__.py  schemas.py  services.py
backend/domains/billing/pages/checkout/: __init__.py  checkout.html  fail.html  success.html  views.py
backend/domains/billing/state/: __init__.py  interface.py  models.py
backend/domains/calculator/: apps.py  interface.py  urls.py
backend/domains/calculator/logic/: schemas.py  services.py
backend/domains/calculator/pages/calculator/: calculator.html  views.py
backend/domains/compare/: __init__.py  apps.py  urls.py
backend/domains/compare/logic/: __init__.py  services.py
backend/domains/compare/pages/compare/: __init__.py  compare.html  views.py
backend/domains/features/cart/: __init__.py  apps.py  interface.py  models.py  services.py  urls.py
backend/domains/features/cart/migrations/: 0001_initial.py
backend/domains/features/marketing/: apps.py  models.py
backend/domains/features/marketing/campaigns/: __init__.py  interface.py
backend/domains/features/marketing/referrals/: __init__.py  interface.py
backend/domains/features/payments/: __init__.py  api.py  apps.py  interface.py  models.py  schemas.py  services.py  urls.py
backend/domains/features/payments/integrations/: toss.py
backend/domains/features/payments/migrations/: 0001_initial.py
backend/domains/features/prices/: __init__.py  apps.py  conf.py  interface.py  models.py  schemas.py  services.py  tasks.py  urls.py
backend/domains/features/prices/integrations/: __init__.py  (+6 more)
backend/domains/features/seo/: apps.py  models.py  urls.py  views.py
backend/domains/features/supplements/: __init__.py  admin.py  apps.py  conf.py  interface.py  logic.py  models.py  schemas.py  services.py  urls.py  vision_service.py
backend/domains/features/wishlist/: __init__.py  apps.py  interface.py  models.py  services.py  urls.py
backend/domains/integrations/: __init__.py  apps.py  base.py
backend/domains/integrations/coupang/: client.py  interface.py
backend/domains/integrations/elevenst/: __init__.py  client.py  interface.py
backend/domains/integrations/gemini/: __init__.py  client.py  interface.py  prompts.py
backend/domains/integrations/naver/: __init__.py  client.py  interface.py  schemas.py
backend/domains/integrations/tosspayments/: __init__.py  client.py  interface.py  schemas.py  urls.py  webhook.py
backend/domains/search/: __init__.py  admin.py  apps.py  interface.py  urls.py
backend/domains/search/logic/: __init__.py  schemas.py  services.py
backend/domains/search/migrations/: 0001_initial.py  0002_coupangmanualproduct.py  0003_rename_search_coup_is_acti_idx_search_coup_is_acti_203bcf_idx_and_more.py  0004_productcache.py
backend/domains/search/state/: __init__.py  interface.py  models.py
backend/domains/search/templatetags/: __init__.py  search_tags.py
backend/domains/wishlist/: __init__.py  admin.py  apps.py  interface.py  models.py  selectors.py  services.py  tasks.py  urls.py
backend/domains/wishlist/migrations/: 0001_initial.py  0002_pricealert.py  0003_pricehistory.py  0004_rename_price_histo_wishlis_idx_price_histo_wishlis_97891f_idx.py
backend/domains/wishlist/templatetags/: __init__.py  wishlist_tags.py
backend/fixtures/: prices.json  supplements.json
backend/static/: manifest.json  sw.js
backend/static/css/: input.css  mobile-improvements.css
backend/static/js/: vendor-entry.js
backend/templates/: 404.html  500.html  _bottom_nav.html  _dashboard_base.html  _footer.html  _header.html  _loading_overlay.html  _metadata.html  _sidebar.html  base.html
backend/templates/analytics/: _database_stats.html  dashboard.html
backend/templates/notifications/: _item.html
backend/templates/notifications/email/: order_confirmation.html  order_confirmation.txt  price_alert.html  price_alert.txt  welcome.html
scripts/: create_domain.py  create_superuser.py  fix_database.ps1  fix_database.sh  init_project.py  seed_dummy.py  sync_project.py  test_gemini.py  update_db_password.py
(+128 files in other folders)
