[tool.uv]
package = false

[project]
name = "almaeng"
version = "6.0.0"
description = "AI 쇼핑 도우미 - 자연어 검색 기반 가격 비교 서비스"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "xid", email = "xid@daemon.dev" }]
keywords = ["django", "htmx", "ai", "gemini", "shopping", "price-comparison", "11st", "naver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12,<3.13"

dependencies = [
    # ============================================
    # 1. Core Framework & API
    # ============================================
    "django>=5.1,<6.0",
    "django-ninja>=1.0",
    "django-ninja-extra>=0.30.8",
    # ============================================
    # 2. Frontend & UI (Hypermedia-Driven)
    # ============================================
    "django-unfold",            # Modern Admin
    "django-components",        # Server-side Components
    "django-template-partials", # HTML Fragments
    "django-htmx",              # HTMX Integration
    "django-browser-reload",    # Hot Reload (DX)
    "django-filter",            # API Filtering
    # ============================================
    # 3. Data & Models
    # ============================================
    "psycopg[binary]",          # PostgreSQL Driver
    "pgvector",                 # AI Vector DB
    "django-ulid",              # Sortable UUID (ULID)
    "django-lifecycle",         # Model Lifecycle Hooks
    "django-safedelete",        # Soft Delete
    "django-polymorphic",       # Model Inheritance
    "django-taggit",            # Tagging System
    "django-jsonform",          # JSON Form UI
    "django-auto-prefetch",     # Anti N+1 Queries
    "django-pgtrigger",         # PostgreSQL Triggers
    "django-concurrency",       # Optimistic Locking
    "django-schema-graph",      # DB Schema Visualization
    # ============================================
    # 4. Async, Tasks & Performance
    # ============================================
    "taskiq[redis]",            # Async Task Queue (Celery alternative)
    "tenacity",                 # Retry Logic (API resilience)
    "django-cacheops",          # Auto Cache Invalidation
    "whitenoise",               # Static File Serving
    "structlog",                # Structured JSON Logging
    "sentry-sdk",               # Error Tracking & Monitoring
    "django-health-check",      # Health Check Endpoints
    "django-log-request-id",    # Request Tracing
    "redis",                    # Redis Client
    # ============================================
    # 5. Security & Authentication
    # ============================================
    "django-allauth[socialaccount]",  # OAuth & Social Login
    "django-allauth-ui",              # Allauth UI Templates
    "django-guardian",                # Object-Level Permissions
    "django-axes",                    # Brute-Force Protection
    "django-cors-headers",            # CORS Headers
    "django-honeypot",                # Anti-Spam Honeypot
    # ============================================
    # 6. Business Features
    # ============================================
    # "dj-stripe",               # Stripe (use Portone for Korea)
    "django-constance[database]", # Live Config
    "django-meta",              # SEO Meta Tags
    "django-rosetta",           # Translation UI
    "django-simple-history",    # Model Versioning
    "django-import-export",     # Excel Import/Export
    "django-versatileimagefield", # Image Processing
    "django-watson",            # Full-Text Search
    "django-waffle",            # Feature Flags
    "django-anymail",           # Email Service
    "django-cleanup",           # Auto File Cleanup
    "django-dbbackup",          # Database Backup
    # ============================================
    # 7. AI (Google Gemini Only)
    # ============================================
    "google-genai",             # Gemini API (new unified SDK)
    "pydantic>=2.0",            # Schema Validation (AI structured output)
    # ============================================
    # 8. Shopping APIs (PRD v2)
    # ============================================
    "httpx>=0.27.0",            # Async HTTP Client (11st, Naver APIs)
    # ============================================
    # 9. Config & RBAC
    # ============================================
    "pyyaml",                   # Policy-as-Code RBAC
    # ============================================
    # 10. Server & Infrastructure
    # ============================================
    "django-environ",           # Environment Config
    "django-compressor",        # Asset Compression
    "django-storages",          # Cloud Storage
    "uvicorn[standard]",        # ASGI Server (Development)
    "granian>=2.6.0",           # Rust ASGI Server (Production)
    "logfire[django]>=4.16.0",
    "pydantic-ai>=1.22.0",
    "instructor>=1.13.0",
    "outlines>=1.2.9",
    "pydantic-settings>=2.12.0",
    "django-redis>=5.0.0",
    "playwright>=1.57.0",
    "selectolax>=0.4.6",
    "taskiq-redis>=1.2.1",
]

[project.optional-dependencies]
# Vision AI for sports science applications
vision = [
    "mediapipe",
    "ultralytics",  # YOLO
    "opencv-python",
]

[project.urls]
Homepage = "https://almaeng.daemonx.cc"
Documentation = "https://github.com/daemonXid/almaeng#readme"
Repository = "https://github.com/daemonXid/almaeng"

[dependency-groups]
dev = [
    # --- Testing ---
    "pytest",                   # Test Framework
    "pytest-django",            # Django Integration
    "pytest-cov",               # Coverage
    "pytest-mock",              # Mocking
    "pytest-asyncio",           # Async Tests
    "hypothesis",               # Property-based Testing
    "model-bakery",             # Test Data Factory
    "Pillow",                   # Image Processing (tests)
    "respx",                    # HTTP Mocking
    # --- Debugging & Profiling ---
    "kolo",                     # Visual Profiler
    "django-debug-toolbar",     # Debug Toolbar
    "django-silk",              # Query Profiling
    "django-extensions",        # Shell Plus
    "django-tui",               # Terminal UI
    "django-typer",             # Typed CLI Commands
    "ipython",                  # Enhanced Shell
    # --- Code Quality ---
    "ruff",                     # Linter + Formatter
    "pre-commit",               # Git Hooks
    "mypy",                     # Static Type Checker
    "django-stubs",             # Django Type Stubs
    "typeguard",                # Runtime Type Checking
    # --- Documentation ---
    "mkdocs-material",          # Documentation Site
]


# ============================================
# Code Quality Tools
# ============================================
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["backend"]
exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (used for re-exports)
    "E731",   # do not assign a lambda expression (used for fallbacks)
    "B008",   # do not perform function calls in argument defaults
    "UP046",  # Use type parameters (PEP 695 optional style)
    "UP047",  # Use type parameters for generic functions (PEP 695 optional)
    "RUF001", # Ambiguous unicode characters (intentional emoji usage)
    "RUF012", # Mutable class attributes (Django Meta class pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["domains", "config"]

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
strict = false

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["backend"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db -v"
asyncio_mode = "auto"

